--- a/frontend/src/pages/iolist/lookuplist/lookuplist.css
+++ b/frontend/src/pages/iolist/lookuplist/lookuplist.css
@@ -1,21 +1,55 @@
+.lookup-list{
+    max-width: 100vw;
+}
 .component-flex{
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     gap: 1rem;
+
 }
 .component-card{
-    width: 100%;
-  
 
+    display: flex;
+    border: 5px solid rgb(255, 68, 0);
+    gap:1rem;
+}
+
+.component-card h3{
+    width: 10%;
+    align-self: center;
 }
 .component-details{
-    width: 100%;
+    padding: 0.7rem;
+    width: 90%;
     display: flex;
-    gap: 4rem;
-    border: 5px solid rgb(255, 68, 0);
+    gap: 2rem;
+    border-left:5px solid rgb(255, 68, 0); ;
 
+}
+.mid-st{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    text-align:left;
+}
+.first-st{
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+  
 }
 p{
     text-align:left;
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+ul{
+    list-style: none;
+    text-align:left;
+}
+.cable-info{
+    display: flex;
+    flex-direction: column;
+    gap:1rem
 }
